Build test on macosx

--- a/urdf_parser/CMakeLists.txt
+++ b/urdf_parser/CMakeLists.txt
@@ -1,71 +1,115 @@
-add_library(urdfdom_world SHARED src/pose.cpp src/model.cpp src/link.cpp src/joint.cpp src/world.cpp)
+# dependencies
+# urdfdom headers
+set(URDFDOM_HEADER_INCLUDE_DIRS
+  ${CMAKE_CURRENT_SOURCE_DIR}/../ext/urdfdom_headers/urdf_exception/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/../ext/urdfdom_headers/urdf_model/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/../ext/urdfdom_headers/urdf_model_state/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/../ext/urdfdom_headers/urdf_sensor/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/../ext/urdfdom_headers/urdf_world/include
+)
+
+# console bridge
+set(CONSOLE_BRIDGE_INCLUDE_DIRS
+  ${CMAKE_CURRENT_SOURCE_DIR}/../ext/console_bridge/include
+  ${CMAKE_CURRENT_BINARY_DIR}/../ext/console_bridge
+)
+
+#--------------------------------------------------------------------------------
+# urdfdom_world
+add_library(urdfdom_world SHARED 
+  src/pose.cpp 
+  src/model.cpp 
+  src/link.cpp 
+  src/joint.cpp 
+  src/world.cpp
+)
+
+target_include_directories(urdfdom_world
+  PUBLIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${URDFDOM_HEADER_INCLUDE_DIRS}
+  ${CONSOLE_BRIDGE_INCLUDE_DIRS}
+)
+
 target_link_libraries(urdfdom_world 
   tinyXML 
   console_bridge
 )
-target_include_directories(urdfdom_world
-  PUBLIC
-  "include"
-  PRIVATE
-  urdf_exception
-  urdf_model
-  urdf_model_state
-  urdf_sensor
-  urdf_world
-)
-set_target_properties(urdfdom_world PROPERTIES SOVERSION ${URDF_MAJOR_MINOR_VERSION})
 
-add_library(urdfdom_model SHARED src/pose.cpp src/model.cpp src/link.cpp src/joint.cpp)
+set_target_properties(urdfdom_world 
+  PROPERTIES 
+  SOVERSION ${URDF_MAJOR_MINOR_VERSION}
+)
+
+# urdfdom_model
+add_library(urdfdom_model SHARED 
+  src/pose.cpp 
+  src/model.cpp 
+  src/link.cpp 
+  src/joint.cpp
+)
+
 target_link_libraries(urdfdom_model 
   tinyXML
   console_bridge
 )
+
 target_include_directories(urdfdom_model
   PUBLIC
-  "include"
-  PRIVATE
-  urdf_exception
-  urdf_model
-  urdf_model_state
-  urdf_sensor
-  urdf_world
-)
-set_target_properties(urdfdom_model PROPERTIES SOVERSION ${URDF_MAJOR_MINOR_VERSION})
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${URDFDOM_HEADER_INCLUDE_DIRS}
+  ${CONSOLE_BRIDGE_INCLUDE_DIRS})
 
-add_library(urdfdom_sensor SHARED src/urdf_sensor.cpp)
+set_target_properties(urdfdom_model 
+  PROPERTIES SOVERSION 
+  ${URDF_MAJOR_MINOR_VERSION}
+)
+
+# urdfdom_sensor
+add_library(urdfdom_sensor SHARED 
+  src/urdf_sensor.cpp
+)
+
 target_link_libraries(urdfdom_sensor 
   urdfdom_model 
   tinyXML
   console_bridge
 )
+
 target_include_directories(urdfdom_sensor 
   PUBLIC
-  "include"
-  PRIVATE
-  urdf_exception
-  urdf_model
-  urdf_model_state
-  urdf_sensor
-  urdf_world
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${URDFDOM_HEADER_INCLUDE_DIRS}
+  ${CONSOLE_BRIDGE_INCLUDE_DIRS}
 )
-set_target_properties(urdfdom_sensor PROPERTIES SOVERSION ${URDF_MAJOR_MINOR_VERSION})
 
-add_library(urdfdom_model_state SHARED src/urdf_model_state.cpp src/twist.cpp)
+set_target_properties(urdfdom_sensor 
+  PROPERTIES 
+  SOVERSION ${URDF_MAJOR_MINOR_VERSION}
+)
+
+# urdfdom_model_state
+add_library(urdfdom_model_state SHARED 
+  src/urdf_model_state.cpp 
+  src/twist.cpp
+)
+
 target_link_libraries(urdfdom_model_state 
   tinyXML
   console_bridge
 )
+
 target_include_directories(urdfdom_model_state 
   PUBLIC
-  "include"
-  PRIVATE
-  urdf_exception
-  urdf_model
-  urdf_model_state
-  urdf_sensor
-  urdf_world
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${URDFDOM_HEADER_INCLUDE_DIRS}
+  ${CONSOLE_BRIDGE_INCLUDE_DIRS}
 )
-set_target_properties(urdfdom_model_state PROPERTIES SOVERSION ${URDF_MAJOR_MINOR_VERSION})
+
+set_target_properties(urdfdom_model_state 
+  PROPERTIES 
+  SOVERSION ${URDF_MAJOR_MINOR_VERSION}
+)
 
 # --------------------------------
 
